[package]
name = "dpop-verifier"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Lightweight DPoP proof verifier with pluggable replay store"
repository = "https://github.com/ukonhattu/dpop-verifier"
readme = "README.md"
keywords = ["oauth", "dpop", "oidc", "security", "jwt"]
categories = ["authentication", "cryptography", "web-programming"]

[features]
default = []
actix-web = ["dep:actix-web"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
p256 = { version = "0.13", features = ["ecdsa"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"
time = "0.3"
subtle = "2.6.1"
url = "2.5.7"
actix-web = { version = "4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
rand_core = { version = "0.6", features = ["getrandom"] }
